# prac-users

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/archived_versions/: 495872fa91e6_cascade_resolve_request_on_users_delete.py  5b527241817b_everything_but_email_is_nullable_is_.py  d84004be582d_create_initial_tables.py
alembic/versions/: 0001_initial_users_and_resolve_requests.py  0002_add_user_stats_and_processed_messages.py  0002_feedbacks_count_and_processed_messages.py  aa12b98ce3d1_user_resolve_request_idempotency.py  b4a29d3663d6_add_user_fields.py  d84004be582d_create_initial_tables.py
src/: application.py  config.py  db.py  exception_handlers.py  exceptions.py  logging_filters.py  main.py  request_context.py
src/exceptions/: __init__.py  base.py  common.py  consumer.py  events.py  exception_handlers.py  invariants.py  users.py
src/middleware/: request_id.py
src/models/: __init__.py  base.py  processed_messages.py  user_resolve_requests.py  users.py
src/repositories/: processed_messages.py  users.py
src/routers/: dependencies.py  healthcheck.py  users.py
src/schemas/: healthcheck.py  users.py
src/services/: user_resolution.py  users.py
src/workers/: db_error_classifier.py  event_handlers.py  order_events_consumer.py
tests/: conftest.py  test_order_created_event_handler.py  test_order_events_consumer.py  test_order_feedback_created_event_handler.py
